2022-08-31T16:07:10Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965347410
* notice: last 14d: unq all: 43 5200
* notice: prev accum: outdated-unq outdated-all / unq all: 919 54687 / 1018 59903
* notice: next accum: outdated-unq outdated-all / unq all: 919 54687 / 1018 59887
* notice: prev exec diff / last date diff / accum: unq all: +0 +112 -0 -128 / +2 +231 -0 -0 / 2 231
* notice: removed / changed dates: [] / [2022-08-17 2022-08-31]

2022-08-31T08:07:16Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2962256695
* notice: last 14d: unq all: 43 5216
* notice: prev accum: outdated-unq outdated-all / unq all: 919 54687 / 1016 59938
* notice: next accum: outdated-unq outdated-all / unq all: 919 54687 / 1018 59903
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -0 -156 / +2 +119 -0 -0 / 2 119
* notice: removed / changed dates: [] / [2022-08-17 2022-08-30 2022-08-31]

2022-08-31T00:38:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960544739
* notice: last 14d: unq all: 43 5251
* notice: prev accum: outdated-unq outdated-all / unq all: 914 54320 / 1012 59515
* notice: next accum: outdated-unq outdated-all / unq all: 919 54687 / 1016 59938
* notice: prev exec diff / last date diff / accum: unq all: +0 +131 -0 -17 / +2 +358 -0 -0 / 2 358
* notice: removed / changed dates: [2022-08-16] / [2022-08-17 2022-08-30]

2022-08-30T16:04:30Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2957774065
* notice: last 14d: unq all: 43 5195
* notice: prev accum: outdated-unq outdated-all / unq all: 914 54320 / 1012 59535
* notice: next accum: outdated-unq outdated-all / unq all: 914 54320 / 1012 59515
* notice: prev exec diff / last date diff / accum: unq all: +0 +108 -0 -128 / +2 +227 -0 -0 / 2 227
* notice: removed / changed dates: [] / [2022-08-16 2022-08-30]
