@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-19T08:07:24Z",
-  "count" : 372,
+  "timestamp" : "2022-09-01T00:29:41Z",
+  "count" : 354,
   "count_minmax" : [ 123, 372 ],
-  "count_decinc" : [ -0, +372 ],
+  "count_decinc" : [ -18, +372 ],
   "uniques" : 8,
   "uniques_minmax" : [ 2, 8 ],
   "uniques_decinc" : [ -0, +8 ]
