@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T16:07:10Z",
-  "count" : 231,
-  "count_minmax" : [ 119, 231 ],
-  "count_decinc" : [ -0, +231 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-09-01T00:29:41Z",
+  "count" : 368,
+  "count_minmax" : [ 119, 368 ],
+  "count_decinc" : [ -0, +368 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
