@@ -1,15 +1,10 @@
 {
-  "count": 5200,
-  "uniques": 43,
+  "count": 5260,
+  "uniques": 44,
   "clones": [
     {
-      "timestamp": "2022-08-17T00:00:00Z",
-      "count": 59,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-18T00:00:00Z",
-      "count": 372,
+      "count": 354,
       "uniques": 8
     },
     {
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 231,
-      "uniques": 2
+      "count": 368,
+      "uniques": 3
     }
   ]
 }
