@@ -1,3 +1,11 @@
+2022-09-01T00:29:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968001792
+* notice: last 14d: unq all: 44 5260
+* notice: prev accum: outdated-unq outdated-all / unq all: 919 54687 / 1018 59887
+* notice: next accum: outdated-unq outdated-all / unq all: 920 55047 / 1019 60307
+* notice: prev exec diff / last date diff / accum: unq all: +1 +137 -0 -18 / +3 +368 -0 -0 / 3 368
+* notice: removed / changed dates: [2022-08-17] / [2022-08-18 2022-08-31]
+
 2022-08-31T16:07:10Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965347410
 * notice: last 14d: unq all: 43 5200
